// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedReportRulesOnlySections CombinedReportNotApplicableSection renders 1`] = `
<DocumentFragment>
  <div
    class="result-section"
  >
    <div
      id="collapsible-header"
    >
      <mock-combinedresultsectiontitle
        outcomecount="0"
        outcometype="inapplicable"
        title="Not applicable rules"
      />
    </div>
    <div
      id="collapsible-content"
    >
      <mock-rulesonly
        cardruleresults=""
        deps="[object Object]"
        outcometype="inapplicable"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CombinedReportRulesOnlySections CombinedReportPassedSection renders 1`] = `
<DocumentFragment>
  <div
    class="result-section"
  >
    <div
      id="collapsible-header"
    >
      <mock-combinedresultsectiontitle
        outcomecount="0"
        outcometype="pass"
        title="Passed rules"
      />
    </div>
    <div
      id="collapsible-content"
    >
      <mock-rulesonly
        cardruleresults=""
        deps="[object Object]"
        outcometype="pass"
      />
    </div>
  </div>
</DocumentFragment>
`;
